k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: medichannel
spec:
  selector:
    app: auth-service
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30011
  type: NodePort
